revert json content. biscuits line wrapping to be fixed/too many items

--- a/public/styles.css
+++ b/public/styles.css
@@ -490,7 +490,7 @@ body {
   }
 
   #avatar img {
-    height: 2rem;
+    height: 3rem;
   }
 
   .cards-container {
